fix question mark on cta not being aligned

--- a/core/static/css/home.css
+++ b/core/static/css/home.css
@@ -58,6 +58,10 @@ html {
   animation: animate 2s steps(18) infinite, cursor .4s step-end infinite alternate;
 }
 
+.type-question {
+  vertical-align: middle;
+  font-size: 1em; /* Match the animated text size */
+}
 
 #type-cursor {
   display: inline-block;
